--- a/game.css
+++ b/game.css
@@ -15,7 +15,8 @@ h2 {
     text-align: center;
     margin: 20px 0;
     color: yellow;
-    -webkit-text-stroke: 1px black
+    -webkit-text-stroke: 1px black;
+    -moz-text-stroke: 1px black;
 }
     
 #the-dojo {
@@ -40,6 +41,7 @@ h2 {
     opacity: 80%;
     color: rgb(229, 229, 233);
     -webkit-text-stroke: .5px white;
+    -moz-text-stroke: .5px white;
 }
 h4 {
     font-size: 150%;
@@ -53,6 +55,7 @@ h4 {
     border-bottom: 1px solid saddlebrown;
     color:black;
     -webkit-text-stroke: 1% white;
+    -moz-text-stroke: 1% white;
 }
 .bush {
     background-image: url(assets/bush.png);
@@ -67,7 +70,6 @@ h4 {
 }
 
 #restart {
-    /* text-align: center; */
     width: 50%;
     height: 2em;
     border-radius: 15%;
@@ -76,10 +78,14 @@ h4 {
 }
 a {
     background-color: black;
-    /* margin: auto; */
+    margin: 1% auto;
     font-size: 50%;
     text-decoration: none;
     color: ghostwhite;
     -webkit-text-stroke: .1px slategrey;
-    position: relative;
+    -moz-text-stroke: .1px slategrey;
+    display: flex;
+    justify-content: center;
+    width: 21%;
+    
 }
