--- a/game.css
+++ b/game.css
@@ -84,6 +84,7 @@ div a {
     justify-content: center;
     align-items: flex-end;
     width: fit-content;
+    margin: 5% auto;
     /* display: flex; */
     /* justify-content: center; */
     /* width: 21%; */
