--- a/game.css
+++ b/game.css
@@ -12,21 +12,21 @@ body {
     background-size:100%;
     /* background-repeat: no-repeat; */
 }   
-h2 {
-    text-align: center;
-    margin: 20px 0;
-    color: yellow;
-    -webkit-text-stroke: 1px black;
-    -moz-text-stroke: 1px black;
-}
-    
 #the-dojo {
     width: 320px;
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
 }
-
+#title {
+    background-color: rgba(0,0,0,.7);
+    width: 320px;
+    margin: 20px auto;
+    text-align: center;
+    color: chartreuse;
+    -webkit-text-stroke: 1px black;
+    -moz-text-stroke: 1px black;
+}
 .gameover {
     padding: 5px;
     margin: auto;
