--- a/game.css
+++ b/game.css
@@ -88,13 +88,35 @@ body {
     flex-wrap: wrap;
     gap: 10px;
 }
+#instr {
+    display: none;
+    margin: 10px;
+    padding: 10px;
+    line-height: 1.5em;
+    color: chartreuse;
+    background-color: navy;
+    width: fit-content;
+    height: fit-content;
+    position: relative;
+    text-align: center; */
+}
 
 #github:hover {
     font-size: 2.5em;
+    -webkit-transition: all 0.4s ease-in-out; 
+    -moz-transition: all 0.4s ease-in-out; 
+    -ms-transition: all 0.4s ease-in-out; 
+    -o-transition: all 0.4s ease-in-out; 
+    transition: all 0.4s ease-in-out;
 }
 #github {
     position: relative;
     padding: 25px;
+    -webkit-transition: all 0.4s ease-in-out; 
+    -moz-transition: all 0.4s ease-in-out; 
+    -ms-transition: all 0.4s ease-in-out; 
+    -o-transition: all 0.4s ease-in-out; 
+    transition: all 0.4s ease-in-out;
 }
 a,
 #github {
