--- a/game.css
+++ b/game.css
@@ -19,9 +19,6 @@ body {
 }
 #title {
     background-color: rgba(0,0,0,.7);
-    width: 320px;
-    margin: 20px auto;
-    text-align: center;
     color: chartreuse;
     -webkit-text-stroke: 1px black;
     -moz-text-stroke: 1px black;
@@ -31,13 +28,13 @@ body {
     margin: auto;
     display: none;
     flex-direction: column;
-    align-items:center;
+    align-items: center;
     justify-content: space-between;
-    text-align: center;
+    /* text-align: center; */
     width: 310px;
     height: 310px;
     position: relative;
-    background-color: rgba(0,0,0,.7);
+    background-color: rgba(0,0,0,.8);
     top: -320px;
     font-size: 120%;
     opacity: 90%;
@@ -130,11 +127,54 @@ a {
     text-decoration: none;
     color: cyan;
 }
-cite {
-    /* margin: auto; */
-    /* display: flex; */
-    /* flex-direction: column; */
+p > em {
+    text-align: center;
 }
 h3 {
     margin: auto;
+    text-align: center;
+}
+#header {
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    width: 320px;
+    margin: 20px auto;
+    text-align: center;
+}
+#header .info {
+    position: absolute;
+    font-size: 150%;
+    
+}
+.info {
+    color: white;
+    background-color: black;
+    width: fit-content;
+    height: fit-content;
+    border-radius: 50px;
+    padding:5px;
+}
+ul li {
+    list-style-type: square;
+    line-height: 1.5em;
+}
+#sub {
+    list-style-type: circle;
+    padding-left: 4em;
+}
+
+#instr {
+    width: 70vw;
+    /* display: flex; */
+    position: absolute;
+    top: -20px;
+    left: 15vw;
+    padding: 0 20px;
+    margin: 20px auto;
+    text-align: left;
+}
+
+#tutorialWindow {
+    background-image: url(./assets/blindLuck.gif)
 }
