--- a/game.css
+++ b/game.css
@@ -73,12 +73,6 @@ body {
     background-size: contain;
 }
 
-#ex {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: auto;
-}
 
 #restart {
     width: 60%;
@@ -152,7 +146,6 @@ h3 {
 #header .info {
     position: absolute;
     font-size: 150%;
-    
 }
 .info {
     color: white;
@@ -173,15 +166,47 @@ ul li {
 
 #instr {
     width: 70vw;
-    /* display: flex; */
     position: absolute;
-    top: -20px;
+    top: -18px;
     left: 15vw;
     padding: 0 20px;
     margin: 20px auto;
     text-align: left;
+    z-index: 1;
 }
-
+#ex {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+}
+#numbs, #numbs span{
+    line-height: 2em;
+}
+#tutImage{
+    background-image: url("./assets/blindLuck.gif");
+    object-fit: fill;
+    width: 320px;
+    height: 320px;
+}
 #tutorialWindow {
-    background-image: url(./assets/blindLuck.gif)
+    display: flex;
+    justify-content: center;
+    position: relative;
+    top: -320px;
+}
+#cap {
+    background-color: navy;
+    color: chartreuse;
+    padding: 10px;
+    line-height: 1.5em;
+    display: flex;
+    flex-direction: column;
+    width: 320px;
+    align-items: center;
+    justify-content: space-around;
+}
+#close {
+    position: relative;
+    left: -30px;
 }
