--- a/game.css
+++ b/game.css
@@ -1,15 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
-    
+@media screen and (min-width: 890px) {
+    #tortPanels {
+        display: flex;
+    }
+}
 * {
     margin: 0;
     padding: 0;
     font-family: 'Press Start 2P', monospace;
-    
 }
 body {
     background-color: slategrey;
     background-image: url('assets/forest.jpg');
-    background-size: 100%;
+    background-size: fill;
 }   
 #the-dojo {
     width: 320px;
@@ -30,19 +33,14 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    /* text-align: center; */
     width: 310px;
     height: 310px;
     position: relative;
-    background-color: rgba(0,0,0,.8);
+    background-color: rgba(0,0,0,.6);
     top: -320px;
     font-size: 120%;
     opacity: 90%;
     color: red;
-    text-stroke: 1px maroon;
-    -webkit-text-stroke: 1px maroon;
-    -moz-text-stroke: 1px maroon;
-    font-weight: 900;
 }
 .tatami {
     background-color: forestgreen;
@@ -85,22 +83,34 @@ body {
     display: flex;
     flex-wrap: wrap;
     gap: 10px;
+    text-stroke: 1px black;
+    -ms-text-stroke: 1px black;
+    -webkit-text-stroke: 1px black;
 }
 #instr {
     display: none;
-    margin: 10px;
-    padding: 10px;
+    flex-direction: column;
     line-height: 1.5em;
-    color: chartreuse;
-    background-color: navy;
+    color: rgb(105, 182, 244);
+    background-color: #1B3B2C;
     width: fit-content;
     height: fit-content;
-    position: relative;
-    text-align: center; */
+    width: 70vw;
+    position: absolute;
+    top: -18px;
+    left: 15vw;
+    margin: 20px auto;
+    z-index: 1;
+    /* : 10px; */
 }
-
+#instr ul li,
+#instr p {
+    font-size: .8em;
+    margin-bottom: .5em;
+    line-height: 2em;
+}
 #github:hover {
-    font-size: 2.5em;
+    font-size: 3em;
     -webkit-transition: all 0.4s ease-in-out; 
     -moz-transition: all 0.4s ease-in-out; 
     -ms-transition: all 0.4s ease-in-out; 
@@ -145,6 +155,8 @@ h3 {
 }
 #header .info {
     position: absolute;
+    top: 15px;
+    left: 350px;
     font-size: 150%;
 }
 .info {
@@ -160,20 +172,11 @@ ul li {
     line-height: 1.5em;
 }
 .sub {
-    list-style-type: circle;
-    padding-left: 4em;
+    list-style-type: disc;
+    margin-left: 4em;
+    font-size: .6em;
 }
 
-#instr {
-    width: 70vw;
-    position: absolute;
-    top: -18px;
-    left: 15vw;
-    padding: 0 20px;
-    margin: 20px auto;
-    text-align: left;
-    z-index: 1;
-}
 #ex {
     display: inline-flex;
     justify-content: center;
@@ -183,30 +186,70 @@ ul li {
 #numbs, #numbs span{
     line-height: 2em;
 }
-#tutImage{
-    background-image: url("./assets/blindLuck.gif");
-    object-fit: fill;
+.tutImage{
     width: 320px;
     height: 320px;
+    
+}
+#tutImage1{
+    background-image: url("./assets/blindLuck.gif");
+}
+#tutImage2{
+    background-image: url("./assets/islandsCorners.gif");
+}
+#tutImage3{
+    background-image: url("./assets/willynilly.gif");
+}
+#tutImage4{
+    background-image: url("./assets/roshambo.gif");
+}
+.showTuto {
+    display: flex;
 }
 #tutorialWindow {
     display: flex;
     justify-content: center;
     position: relative;
     top: -320px;
+    left: 18px;
+}
+#tips {
+    padding-left: 2em;
 }
 #cap {
+    font-size: 80%;
     background-color: navy;
     color: chartreuse;
     padding: 10px;
     line-height: 1.5em;
     display: flex;
     flex-direction: column;
-    width: 320px;
+    width: 300px;
+    height: 300px;
     align-items: center;
     justify-content: space-around;
+    overflow: auto;
 }
 #close {
     position: relative;
-    left: -30px;
+    left: -117px;
+}
+.change {
+    font-size: 500%;
+    font-weight: 900;
+    color: chartreuse;
+    height: 1em;
+    width: fit-content;
+    text-stroke: 2px navy;
+    -webkit-text-stroke: 2px navy;
+    -moz-text-stroke: 2px navy;
+    position: relative;
+    top: 120px;
+}
+#next {
+    padding-left: 10px;
+}
+.sample {
+    height: 2em;
+    width: 2em;
 }
