--- a/game.css
+++ b/game.css
@@ -189,19 +189,23 @@ ul li {
 .tutImage{
     width: 320px;
     height: 320px;
-    
+    -webkit-transition: all 0.4s ease-in-out; 
+    -moz-transition: all 0.4s ease-in-out; 
+    -ms-transition: all 0.4s ease-in-out; 
+    -o-transition: all 0.4s ease-in-out; 
+    transition: all 0.4s ease-in-out;
 }
 #tutImage1{
-    background-image: url("./assets/blindLuck.gif");
+    background-image: url("https://raw.githubusercontent.com/coren-frankel/NinjaSweeper/main/assets/blindLuck.gif");
 }
 #tutImage2{
-    background-image: url("./assets/islandsCorners.gif");
+    background-image: url("https://raw.githubusercontent.com/coren-frankel/NinjaSweeper/main/assets/islandsCorners.gif");
 }
 #tutImage3{
-    background-image: url("./assets/willynilly.gif");
+    background-image: url("https://raw.githubusercontent.com/coren-frankel/NinjaSweeper/main/assets/willynilly.gif");
 }
 #tutImage4{
-    background-image: url("./assets/roshambo.gif");
+    background-image: url("https://raw.githubusercontent.com/coren-frankel/NinjaSweeper/main/assets/roshambo.gif");
 }
 .showTuto {
     display: flex;
