--- a/game.css
+++ b/game.css
@@ -1,4 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
+/* Tutorial screen size format changes */
+@media screen and (max-width: 890px) {
+    div .change {
+        top: 290px;
+    }
+}
 @media screen and (min-width: 890px) {
     #tortPanels {
         display: flex;
@@ -11,7 +18,7 @@
 }
 body {
     background-color: slategrey;
-    background-image: url('assets/forest.jpg');
+    background-image: url('https://raw.githubusercontent.com/coren-frankel/NinjaSweeper/main/assets/forest.jpg');
     background-size: fill;
 }   
 #the-dojo {
@@ -55,7 +62,7 @@ body {
     -moz-text-stroke: 1% white;
 }
 .bush {
-    background-image: url(assets/bush.png);
+    background-image: url('https://raw.githubusercontent.com/coren-frankel/NinjaSweeper/main/assets/bush.png');
     background-size: contain;
 }
     
@@ -67,7 +74,7 @@ body {
 }
 
 .shuriken {
-    background-image: url('assets/star.png');
+    background-image: url('https://raw.githubusercontent.com/coren-frankel/NinjaSweeper/main/assets/star.png');
     background-size: contain;
 }
 
@@ -101,7 +108,6 @@ body {
     left: 15vw;
     margin: 20px auto;
     z-index: 1;
-    /* : 10px; */
 }
 #instr ul li,
 #instr p {
@@ -189,11 +195,6 @@ ul li {
 .tutImage{
     width: 320px;
     height: 320px;
-    -webkit-transition: all 0.4s ease-in-out; 
-    -moz-transition: all 0.4s ease-in-out; 
-    -ms-transition: all 0.4s ease-in-out; 
-    -o-transition: all 0.4s ease-in-out; 
-    transition: all 0.4s ease-in-out;
 }
 #tutImage1{
     background-image: url("https://raw.githubusercontent.com/coren-frankel/NinjaSweeper/main/assets/blindLuck.gif");
