--- a/game.css
+++ b/game.css
@@ -10,6 +10,10 @@ body {
   background-color: slategrey;
   background-image: url('https://raw.githubusercontent.com/coren-frankel/NinjaSweeper/main/assets/forest.jpg');
   background-size: fill;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 #the-dojo {
@@ -34,10 +38,10 @@ body {
   align-items: center;
   justify-content: space-between;
   width: 310px;
-  height: 311px;
+  height: 310px;
   position: relative;
   background-color: rgba(0, 0, 0, .6);
-  top: -430px;
+  top: -365px;
   font-size: 120%;
   color: red;
 }
@@ -90,6 +94,7 @@ body {
 #restart {
   width: 60%;
   height: 2em;
+  transform: translateY(40px);
   border-radius: 50px;
   background-color: black;
   color: crimson;
@@ -100,7 +105,7 @@ body {
   flex-wrap: wrap;
   gap: 10px;
   text-align: center;
-  text-stroke: 1px black;
+  /* text-stroke: 1px black; */
   -ms-text-stroke: 1px black;
   -webkit-text-stroke: 1px black;
 }
@@ -111,12 +116,12 @@ body {
   line-height: 1.25em;
   color: #1d3028;
   background-color: #2b7d9b;
-  width: fit-content;
-  height: fit-content;
   width: 70vw;
-  position: relative;
-  top: -420px;
-  margin: auto;
+  position: absolute;
+  padding: 30px 50px;
+  justify-content: space-around;
+  align-content: center;
+  gap: 10px;
   z-index: 1;
 }
 
@@ -223,6 +228,14 @@ ul li {
 .tutImage {
   width: 321px;
   height: 320px;
+  opacity: 1;
+  animation: fade 1s linear;
+}
+
+
+@keyframes fade {
+  0% { opacity: 0 }
+  100% { opacity: 1 }
 }
 
 #tutImage1 {
@@ -253,9 +266,13 @@ ul li {
 #tutorialWindow {
   display: flex;
   justify-content: center;
-  position: relative;
-  top: -429px;
+  position: absolute;
+  height: 50vh;
+  width: 100vw;
+  top: 104px;
   left: 18px;
+  opacity: 1;
+  animation: fade 0.1s linear;
 }
 
 #tips {
